--- a/SquarifiedTreemap.Test/SquarifiedTreemap.Test.csproj
+++ b/SquarifiedTreemap.Test/SquarifiedTreemap.Test.csproj
@@ -56,7 +56,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -66,6 +68,7 @@
     <Compile Include="Model\Output\TreemapTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestData.cs" />
+    <Compile Include="ArrayPoolTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SquarifiedTreemap\SquarifiedTreemap.csproj">
