Added a parent property to output nodes
Signed-off-by: Martin Evans <martindevans@gmail.com>

--- a/SquarifiedTreemap/SquarifiedTreemap.csproj
+++ b/SquarifiedTreemap/SquarifiedTreemap.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayPool.cs" />
+    <Compile Include="Extensions\ITreeNodeExtensions.cs" />
+    <Compile Include="ITreeNode.cs" />
     <Compile Include="Model\Input\ITree.cs" />
     <Compile Include="Model\ITreemapNode.cs" />
     <Compile Include="Model\Input\Tree.cs" />
